--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,8 @@ on:
 jobs:  
   build_site:    
   runs-on: ubuntu-latest    
-  steps:      - name: Checkout        
+  steps:      
+  - name: Checkout        
   uses: actions/checkout@v3
       
       # If you're using pnpm, add this step then change the commands and cache key below to use `pnpm`      
