--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
           npm run build
           
       - name: Deploy to GitHub Pages
-        uses: xman4242/BeyondWordsProj
+        uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
-          branch: main
+          branch: gh-pages
           folder: public
