--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-# This is a basic workflow to automatically build a Svelte app and deploy it to GitHub Page
+# This is a basic workflow to automatically build a Svelte app and deploy it to GitHub Pages
 name: Deploy to GitHub Pages
 
 on:
