--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"build": "vite build",
 		"preview": "vite preview",
 		"lint": "eslint .",
-		"deploy": "node ./gh-pages.js"
+		"deploy": "node ./gh-pages.js",
+		"gh-pages": "npm run build && npx gh-pages -d build"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
