--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
 		"svelte-preprocess": "^5.0.4",
 		"vite": "^4.4.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"konva": "^9.2.3"
+	}
 }
