Revert "12_1 Sidebar Update"
This reverts commit 4d8609c00d9b3e9f71e3b63c28c8346854860165.

--- a/package.json
+++ b/package.json
@@ -21,8 +21,5 @@
 		"svelte-preprocess": "^5.0.4",
 		"vite": "^4.4.2"
 	},
-	"type": "module",
-	"dependencies": {
-		"konva": "^9.2.3"
-	}
+	"type": "module"
 }
